// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can navigate all ballot pages 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 2rem 1rem;
}

.c2 {
  width: 100%;
  max-width: 40rem;
  margin: auto auto;
}

.c4 {
  line-height: 1.3;
  max-width: 66ch;
  text-align: center;
  margin: auto;
}

.c4 h1 {
  margin: 2rem 0 1rem;
}

.c4 h2 {
  margin: 1.5rem 0 1rem;
}

.c4 h3,
.c4 p {
  margin: 1rem 0;
}

.c4 h1 + p,
.c4 h2 + p,
.c4 h3 + p {
  margin-top: -0.75rem;
}

.c4 > :first-child {
  margin-top: 0;
}

.c4 > :last-child {
  margin-bottom: 0;
}

.c3 {
  margin: auto;
}

.c5 {
  max-width: 320px;
  margin: auto;
}

@media print {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

<div
  class="c0"
>
  <main
    class="c1"
  >
    <div
      class="c2"
    >
      <form>
        <fieldset>
          <legend
            class="c3"
          >
            <label
              for="BallotCode"
            >
              <div
                class="c4"
              >
                <h1>
                  Scan Your Activation Code
                </h1>
                <p>
                  Your ballot will be displayed after scan is complete.
                </p>
                <div
                  class="c5"
                >
                  <svg
                    viewBox="0 0 1160 1160"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h1160v1160H0z"
                      fill="#FFF"
                    />
                    <path
                      d="M400 80h40v40h-40zM480 80h40v40h-40zM520 80h40v40h-40zM600 80h40v40h-40zM680 80h40v40h-40zM720 80h40v40h-40zM520 120h40v40h-40zM640 120h40v40h-40zM720 120h40v40h-40zM480 160h40v40h-40zM400 200h40v40h-40zM440 200h40v40h-40zM480 200h40v40h-40zM600 200h40v40h-40zM640 200h40v40h-40zM720 200h40v40h-40zM400 240h40v40h-40zM440 240h40v40h-40zM560 240h40v40h-40zM600 240h40v40h-40zM640 240h40v40h-40zM680 240h40v40h-40zM720 240h40v40h-40zM400 280h40v40h-40zM600 280h40v40h-40zM720 280h40v40h-40zM400 320h40v40h-40zM480 320h40v40h-40zM560 320h40v40h-40zM640 320h40v40h-40zM720 320h40v40h-40zM400 360h40v40h-40zM520 360h40v40h-40zM80 400h40v40H80zM240 400h40v40h-40zM320 400h40v40h-40zM360 400h40v40h-40zM400 400h40v40h-40zM480 400h40v40h-40zM520 400h40v40h-40zM600 400h40v40h-40zM640 400h40v40h-40zM720 400h40v40h-40zM760 400h40v40h-40zM800 400h40v40h-40zM840 400h40v40h-40zM880 400h40v40h-40zM920 400h40v40h-40zM1040 400h40v40h-40zM120 440h40v40h-40zM200 440h40v40h-40zM240 440h40v40h-40zM280 440h40v40h-40zM360 440h40v40h-40zM400 440h40v40h-40zM520 440h40v40h-40zM640 440h40v40h-40zM680 440h40v40h-40zM720 440h40v40h-40zM800 440h40v40h-40zM880 440h40v40h-40zM920 440h40v40h-40zM1000 440h40v40h-40zM1040 440h40v40h-40zM80 480h40v40H80zM160 480h40v40h-40zM200 480h40v40h-40zM320 480h40v40h-40zM400 480h40v40h-40zM480 480h40v40h-40zM520 480h40v40h-40zM560 480h40v40h-40zM600 480h40v40h-40zM640 480h40v40h-40zM680 480h40v40h-40zM800 480h40v40h-40zM840 480h40v40h-40zM880 480h40v40h-40zM920 480h40v40h-40zM80 520h40v40H80zM200 520h40v40h-40zM360 520h40v40h-40zM400 520h40v40h-40zM480 520h40v40h-40zM560 520h40v40h-40zM600 520h40v40h-40zM720 520h40v40h-40zM960 520h40v40h-40zM80 560h40v40H80zM120 560h40v40h-40zM160 560h40v40h-40zM200 560h40v40h-40zM240 560h40v40h-40zM320 560h40v40h-40zM400 560h40v40h-40zM440 560h40v40h-40zM480 560h40v40h-40zM520 560h40v40h-40zM560 560h40v40h-40zM600 560h40v40h-40zM720 560h40v40h-40zM760 560h40v40h-40zM800 560h40v40h-40zM960 560h40v40h-40zM80 600h40v40H80zM120 600h40v40h-40zM160 600h40v40h-40zM200 600h40v40h-40zM280 600h40v40h-40zM440 600h40v40h-40zM600 600h40v40h-40zM640 600h40v40h-40zM680 600h40v40h-40zM720 600h40v40h-40zM760 600h40v40h-40zM880 600h40v40h-40zM920 600h40v40h-40zM960 600h40v40h-40zM1000 600h40v40h-40zM200 640h40v40h-40zM320 640h40v40h-40zM360 640h40v40h-40zM680 640h40v40h-40zM760 640h40v40h-40zM800 640h40v40h-40zM840 640h40v40h-40zM160 680h40v40h-40zM200 680h40v40h-40zM440 680h40v40h-40zM480 680h40v40h-40zM560 680h40v40h-40zM640 680h40v40h-40zM720 680h40v40h-40zM880 680h40v40h-40zM960 680h40v40h-40zM80 720h40v40H80zM120 720h40v40h-40zM200 720h40v40h-40zM280 720h40v40h-40zM320 720h40v40h-40zM360 720h40v40h-40zM400 720h40v40h-40zM440 720h40v40h-40zM520 720h40v40h-40zM600 720h40v40h-40zM640 720h40v40h-40zM720 720h40v40h-40zM760 720h40v40h-40zM800 720h40v40h-40zM840 720h40v40h-40zM880 720h40v40h-40zM960 720h40v40h-40zM1000 720h40v40h-40zM400 760h40v40h-40zM440 760h40v40h-40zM560 760h40v40h-40zM680 760h40v40h-40zM720 760h40v40h-40zM880 760h40v40h-40zM960 760h40v40h-40zM1040 760h40v40h-40zM400 800h40v40h-40zM440 800h40v40h-40zM480 800h40v40h-40zM520 800h40v40h-40zM560 800h40v40h-40zM600 800h40v40h-40zM640 800h40v40h-40zM720 800h40v40h-40zM800 800h40v40h-40zM880 800h40v40h-40zM960 800h40v40h-40zM480 840h40v40h-40zM520 840h40v40h-40zM600 840h40v40h-40zM720 840h40v40h-40zM880 840h40v40h-40zM960 840h40v40h-40zM1040 840h40v40h-40zM400 880h40v40h-40zM440 880h40v40h-40zM480 880h40v40h-40zM560 880h40v40h-40zM600 880h40v40h-40zM720 880h40v40h-40zM760 880h40v40h-40zM800 880h40v40h-40zM840 880h40v40h-40zM880 880h40v40h-40zM960 880h40v40h-40zM1040 880h40v40h-40zM480 920h40v40h-40zM600 920h40v40h-40zM640 920h40v40h-40zM680 920h40v40h-40zM760 920h40v40h-40zM800 920h40v40h-40zM840 920h40v40h-40zM880 920h40v40h-40zM1000 920h40v40h-40zM1040 920h40v40h-40zM480 960h40v40h-40zM680 960h40v40h-40zM720 960h40v40h-40zM840 960h40v40h-40zM1000 960h40v40h-40zM440 1000h40v40h-40zM480 1000h40v40h-40zM560 1000h40v40h-40zM640 1000h40v40h-40zM680 1000h40v40h-40zM760 1000h40v40h-40zM840 1000h40v40h-40zM960 1000h40v40h-40zM1000 1000h40v40h-40zM400 1040h40v40h-40zM520 1040h40v40h-40zM600 1040h40v40h-40zM640 1040h40v40h-40zM680 1040h40v40h-40zM800 1040h40v40h-40zM880 1040h40v40h-40zM960 1040h40v40h-40zM1000 1040h40v40h-40zM1040 1040h40v40h-40z"
                    />
                    <path
                      d="M122 122h196v196H122z"
                      fill="none"
                    />
                    <path
                      d="M318 80H80v280h280V80h-42zm0 238H122V122h196v196z"
                    />
                    <path
                      d="M842 122h196v196H842z"
                      fill="none"
                    />
                    <path
                      d="M1038 80H800v280h280V80h-42zm0 238H842V122h196v196z"
                    />
                    <path
                      d="M122 842h196v196H122z"
                      fill="none"
                    />
                    <path
                      d="M318 800H80v280h280V800h-42zm0 238H122V842h196v196z"
                    />
                    <g>
                      <path
                        d="M160 160h120v120H160z"
                      />
                    </g>
                    <g>
                      <path
                        d="M880 160h120v120H880z"
                      />
                    </g>
                    <g>
                      <path
                        d="M160 880h120v120H160z"
                      />
                    </g>
                  </svg>
                </div>
              </div>
            </label>
          </legend>
          <input
            class="visually-hidden"
            data-testid="activation-code"
            id="BallotCode"
            type="text"
            value=""
          />
          <button
            class="visually-hidden"
            type="submit"
          >
            Submit
          </button>
        </fieldset>
      </form>
    </div>
  </main>
</div>
`;

exports[`can navigate all ballot pages 2`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 2rem 1rem;
}

.c1 {
  width: 100%;
  max-width: 40rem;
  margin: auto auto;
}

.c2 {
  line-height: 1.3;
  max-width: 66ch;
  text-align: center;
  margin: auto;
}

.c2 h1 {
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c3 {
  box-sizing: border-box;
  cursor: pointer;
  background: #4caf50;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: white;
  line-height: 1;
  white-space: nowrap;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h1>
          General Election
        </h1>
        <p>
          November 3, 2020
          <br />
          Lorem County, State of Ipsumana
        </p>
        <p>
          <button
            class="c3"
            type="button"
          >
            Get Started
          </button>
        </p>
      </div>
    </div>
  </main>
</div>
`;

exports[`can navigate all ballot pages 3`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 2rem 1rem;
}

.c1 {
  width: 100%;
  max-width: 40rem;
  margin: 0 auto;
}

.c3 {
  line-height: 1.3;
  max-width: 66ch;
}

.c3 h1 {
  margin: 2rem 0 1rem;
}

.c3 h2 {
  margin: 1.5rem 0 1rem;
}

.c3 h3,
.c3 p {
  margin: 1rem 0;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h3 + p {
  margin-top: -0.75rem;
}

.c3 > :first-child {
  margin-top: 0;
}

.c3 > :last-child {
  margin-bottom: 0;
}

.c2 {
  margin: 0 0 1rem 4rem;
}

.c4 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c5 {
  position: relative;
  cursor: pointer;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c5:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c5 > div {
  padding: 1rem;
}

.c5 > input + div:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  border-right: 1px solid lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
}

.c5 > input:checked + div:before {
  content: '✓';
  background: white;
  color: #028099;
  border-color: #028099;
}

.c5 > div:first-of-type {
  padding-left: 4rem;
}

.c5 .write-in-candidate-name {
  grid-column: span 2;
}

.c6 {
  margin-right: 0.5rem;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class=""
      >
        <legend
          class="c2"
        >
          <div
            class="c3"
          >
            <h1>
              President
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              0
              .
            </p>
          </div>
        </legend>
        <div
          class="c4"
        >
          <label
            class="c5"
            for="Minnie Mouse"
          >
            <input
              class="visually-hidden c6"
              id="Minnie Mouse"
              name="president"
              type="checkbox"
              value="Minnie Mouse"
            />
            <div>
              <strong>
                Minnie Mouse
              </strong>
            </div>
            <div>
              Mouse
            </div>
          </label>
          <label
            class="c5"
            for="Mickey Mouse"
          >
            <input
              class="visually-hidden c6"
              id="Mickey Mouse"
              name="president"
              type="checkbox"
              value="Mickey Mouse"
            />
            <div>
              <strong>
                Mickey Mouse
              </strong>
            </div>
            <div>
              Mouse
            </div>
          </label>
          <label
            class="c5"
            for="Donald Duck"
          >
            <input
              class="visually-hidden c6"
              id="Donald Duck"
              name="president"
              type="checkbox"
              value="Donald Duck"
            />
            <div>
              <strong>
                Donald Duck
              </strong>
            </div>
            <div>
              Duck
            </div>
          </label>
          <label
            class="c5"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden c6"
              id="writeInCandidate"
              name="president"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="write-in-candidate-name"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c2 {
  color: white;
  text-align: center;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Next
    </button>
    <button
      class="c1"
      type="button"
    >
      Previous
    </button>
    <p
      class="c2"
    >
      1
       of 
      2
    </p>
  </nav>
  .c0 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Review
    </button>
    <button
      class="c1"
      type="button"
    >
      Help
    </button>
    <button
      class="c1"
      type="button"
    >
      Settings
    </button>
    <div />
  </nav>
</div>
`;

exports[`can navigate all ballot pages 4`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  <main
    class="sc-bwzfXH loUfnN"
  >
    <div
      class="sc-htpNat kvmFPg"
    >
      .c1 {
  line-height: 1.3;
  max-width: 66ch;
}

.c1 h1 {
  margin: 2rem 0 1rem;
}

.c1 h2 {
  margin: 1.5rem 0 1rem;
}

.c1 h3,
.c1 p {
  margin: 1rem 0;
}

.c1 h1 + p,
.c1 h2 + p,
.c1 h3 + p {
  margin-top: -0.75rem;
}

.c1 > :first-child {
  margin-top: 0;
}

.c1 > :last-child {
  margin-bottom: 0;
}

.c0 {
  margin: 0 0 1rem 4rem;
}

.c2 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c3 {
  position: relative;
  cursor: pointer;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c3:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c3 > div {
  padding: 1rem;
}

.c3 > input + div:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  border-right: 1px solid lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
}

.c3 > input:checked + div:before {
  content: '✓';
  background: white;
  color: #028099;
  border-color: #028099;
}

.c3 > div:first-of-type {
  padding-left: 4rem;
}

.c3 .write-in-candidate-name {
  grid-column: span 2;
}

.c4 {
  margin-right: 0.5rem;
}

<fieldset
        class=""
      >
        <legend
          class="c0"
        >
          <div
            class="c1"
          >
            <h1>
              Senator
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              0
              .
            </p>
          </div>
        </legend>
        <div
          class="c2"
        >
          <label
            class="c3"
            for="Chad Hanging"
          >
            <input
              class="visually-hidden c4"
              id="Chad Hanging"
              name="senator"
              type="checkbox"
              value="Chad Hanging"
            />
            <div>
              <strong>
                Chad Hanging
              </strong>
            </div>
            <div>
              Independent
            </div>
          </label>
          <label
            class="c3"
            for="Lev Ermachine"
          >
            <input
              class="visually-hidden c4"
              id="Lev Ermachine"
              name="senator"
              type="checkbox"
              value="Lev Ermachine"
            />
            <div>
              <strong>
                Lev Ermachine
              </strong>
            </div>
            <div>
              Independent
            </div>
          </label>
          <label
            class="c3"
            for="John Smith"
          >
            <input
              class="visually-hidden c4"
              id="John Smith"
              name="senator"
              type="checkbox"
              value="John Smith"
            />
            <div>
              <strong>
                John Smith
              </strong>
            </div>
            <div>
              Independent
            </div>
          </label>
          <label
            class="c3"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden c4"
              id="writeInCandidate"
              name="senator"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="write-in-candidate-name"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  <nav
    class="sc-bZQynM jNPfoL"
  >
    <button
      class="sc-gzVnrw gWpXIP"
      type="button"
    >
      Review
    </button>
    <button
      class="sc-gzVnrw gWpXIP"
      type="button"
    >
      Previous
    </button>
    <p
      class="sc-iwsKbI sZzNf"
    >
      2
       of 
      2
    </p>
  </nav>
  <nav
    class="sc-bZQynM eFUAey"
  >
    <button
      class="sc-gzVnrw gWpXIP"
      type="button"
    >
      Review
    </button>
    <button
      class="sc-gzVnrw gWpXIP"
      type="button"
    >
      Help
    </button>
    <button
      class="sc-gzVnrw gWpXIP"
      type="button"
    >
      Settings
    </button>
    <div />
  </nav>
</div>
`;

exports[`can navigate all ballot pages 5`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 2rem 1rem;
}

.c1 {
  width: 100%;
  max-width: 40rem;
  margin: 0 auto;
}

.c2 {
  line-height: 1.3;
  max-width: 66ch;
}

.c2 h1 {
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h1>
          Help
        </h1>
        <p>
          Help content will be available here.
        </p>
      </div>
    </div>
  </main>
  .c0 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <div />
    <button
      class="c1"
      type="button"
    >
      Back
    </button>
    <div />
    <div />
  </nav>
</div>
`;

exports[`can navigate all ballot pages 6`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 2rem 1rem;
}

.c1 {
  width: 100%;
  max-width: 40rem;
  margin: 0 auto;
}

.c2 {
  line-height: 1.3;
  max-width: 66ch;
}

.c2 h1 {
  margin: 2rem 0 1rem;
}

.c2 h2 {
  margin: 1.5rem 0 1rem;
}

.c2 h3,
.c2 p {
  margin: 1rem 0;
}

.c2 h1 + p,
.c2 h2 + p,
.c2 h3 + p {
  margin-top: -0.75rem;
}

.c2 > :first-child {
  margin-top: 0;
}

.c2 > :last-child {
  margin-bottom: 0;
}

.c3 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <h1>
          Settings
        </h1>
        <p>
          Settings will be available here.
        </p>
        <h2>
          Clear Selections
        </h2>
        <p>
          Clearn all selections and start over.
        </p>
        <button
          class="c3"
          type="button"
        >
          Start Over
        </button>
      </div>
    </div>
  </main>
  .c0 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <div />
    <button
      class="c1"
      type="button"
    >
      Back
    </button>
    <div />
    <div />
  </nav>
</div>
`;

exports[`can navigate all ballot pages 7`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 2rem 1rem;
}

.c1 {
  width: 100%;
  max-width: 40rem;
  margin: 0 auto;
}

.c3 {
  line-height: 1.3;
  max-width: 66ch;
}

.c3 h1 {
  margin: 2rem 0 1rem;
}

.c3 h2 {
  margin: 1.5rem 0 1rem;
}

.c3 h3,
.c3 p {
  margin: 1rem 0;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h3 + p {
  margin-top: -0.75rem;
}

.c3 > :first-child {
  margin-top: 0;
}

.c3 > :last-child {
  margin-bottom: 0;
}

.c7 {
  color: gray;
}

.c2 {
  margin: 1rem 0;
}

.c4 {
  width: 100%;
  max-width: 66ch;
  text-align: left;
  border-bottom: 1px solid lightGrey;
}

.c5 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  font-weight: normal;
  border-top: none;
}

.c6 {
  width: 50%;
  padding: 0.5rem 0.25rem;
  font-weight: normal;
  border-top: 1px solid lightGrey;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <h1>
            Official Ballot
          </h1>
          <p
            class="no-print"
          >
            Please review your ballot. Confirm your votes by selecting the “Print Ballot” button.
          </p>
        </div>
      </div>
      <table
        class="c4"
      >
        <caption
          class="no-print visually-hidden"
        >
          <p>
            Summary of your votes.
          </p>
        </caption>
        <thead
          class="no-print"
        >
          <tr>
            <th
              class="c5"
              scope="col"
            >
              <small>
                Contest
              </small>
            </th>
            <th
              class="c5"
              scope="col"
            >
              <small>
                Vote
              </small>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              class="c6"
            >
              President
               
            </th>
            <td
              class="c6"
            >
              <span
                class="c7"
              >
                no selection
              </span>
               
              <small
                class="no-print"
              >
                <a
                  href="/contests/president"
                >
                  change
                </a>
              </small>
            </td>
          </tr>
          <tr>
            <th
              class="c6"
            >
              Senator
               
            </th>
            <td
              class="c6"
            >
              <span
                class="c7"
              >
                no selection
              </span>
               
              <small
                class="no-print"
              >
                <a
                  href="/contests/senator"
                >
                  change
                </a>
              </small>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </main>
  .c0 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: #4caf50;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: white;
  line-height: 1;
  white-space: nowrap;
}

.c2 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Print Ballot
    </button>
    <button
      class="c2"
      type="button"
    >
      Back
    </button>
    <div />
    <div />
  </nav>
</div>
`;

exports[`can navigate all ballot pages 8`] = `
<div
  class="sc-bdVaJa eVuSVk"
>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 2rem 1rem;
}

.c1 {
  width: 100%;
  max-width: 40rem;
  margin: 0 auto;
}

.c3 {
  line-height: 1.3;
  max-width: 66ch;
}

.c3 h1 {
  margin: 2rem 0 1rem;
}

.c3 h2 {
  margin: 1.5rem 0 1rem;
}

.c3 h3,
.c3 p {
  margin: 1rem 0;
}

.c3 h1 + p,
.c3 h2 + p,
.c3 h3 + p {
  margin-top: -0.75rem;
}

.c3 > :first-child {
  margin-top: 0;
}

.c3 > :last-child {
  margin-bottom: 0;
}

.c2 {
  margin: 0 0 1rem 4rem;
}

.c4 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c5 {
  position: relative;
  cursor: pointer;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c5:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c5 > div {
  padding: 1rem;
}

.c5 > input + div:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  border-right: 1px solid lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
}

.c5 > input:checked + div:before {
  content: '✓';
  background: white;
  color: #028099;
  border-color: #028099;
}

.c5 > div:first-of-type {
  padding-left: 4rem;
}

.c5 .write-in-candidate-name {
  grid-column: span 2;
}

.c6 {
  margin-right: 0.5rem;
}

@media print {
  .c0 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

<main
    class="c0"
  >
    <div
      class="c1"
    >
      <fieldset
        class=""
      >
        <legend
          class="c2"
        >
          <div
            class="c3"
          >
            <h1>
              Senator
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              0
              .
            </p>
          </div>
        </legend>
        <div
          class="c4"
        >
          <label
            class="c5"
            for="Chad Hanging"
          >
            <input
              class="visually-hidden c6"
              id="Chad Hanging"
              name="senator"
              type="checkbox"
              value="Chad Hanging"
            />
            <div>
              <strong>
                Chad Hanging
              </strong>
            </div>
            <div>
              Independent
            </div>
          </label>
          <label
            class="c5"
            for="Lev Ermachine"
          >
            <input
              class="visually-hidden c6"
              id="Lev Ermachine"
              name="senator"
              type="checkbox"
              value="Lev Ermachine"
            />
            <div>
              <strong>
                Lev Ermachine
              </strong>
            </div>
            <div>
              Independent
            </div>
          </label>
          <label
            class="c5"
            for="John Smith"
          >
            <input
              class="visually-hidden c6"
              id="John Smith"
              name="senator"
              type="checkbox"
              value="John Smith"
            />
            <div>
              <strong>
                John Smith
              </strong>
            </div>
            <div>
              Independent
            </div>
          </label>
          <label
            class="c5"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden c6"
              id="writeInCandidate"
              name="senator"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="write-in-candidate-name"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c2 {
  color: white;
  text-align: center;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Review
    </button>
    <button
      class="c1"
      type="button"
    >
      Previous
    </button>
    <p
      class="c2"
    >
      2
       of 
      2
    </p>
  </nav>
  .c0 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c1 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

@media print {
  .c0 {
    display: none;
  }
}

<nav
    class="c0"
  >
    <button
      class="c1"
      type="button"
    >
      Review
    </button>
    <button
      class="c1"
      type="button"
    >
      Help
    </button>
    <button
      class="c1"
      type="button"
    >
      Settings
    </button>
    <div />
  </nav>
</div>
`;

exports[`redirects contests index to first contest 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: scroll;
  padding: 2rem 1rem;
}

.c2 {
  width: 100%;
  max-width: 40rem;
  margin: 0 auto;
}

.c4 {
  line-height: 1.3;
  max-width: 66ch;
}

.c4 h1 {
  margin: 2rem 0 1rem;
}

.c4 h2 {
  margin: 1.5rem 0 1rem;
}

.c4 h3,
.c4 p {
  margin: 1rem 0;
}

.c4 h1 + p,
.c4 h2 + p,
.c4 h3 + p {
  margin-top: -0.75rem;
}

.c4 > :first-child {
  margin-top: 0;
}

.c4 > :last-child {
  margin-bottom: 0;
}

.c8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c8 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c11 {
  -webkit-order: -1;
  -ms-flex-order: -1;
  order: -1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0.5rem;
  background: #455a64;
  border-bottom: 1px solid darkgrey;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 > :first-child {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c11 > * {
  margin: 0.25rem;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c9 {
  box-sizing: border-box;
  cursor: pointer;
  background: lightgrey;
  border: none;
  border-radius: 0.25rem;
  padding: 0.4rem 0.7rem;
  color: black;
  line-height: 1;
  white-space: nowrap;
}

.c10 {
  color: white;
  text-align: center;
}

.c3 {
  margin: 0 0 1rem 4rem;
}

.c5 {
  display: grid;
  grid-auto-rows: minmax(auto,1fr);
  grid-gap: 0.75rem;
}

.c6 {
  position: relative;
  cursor: pointer;
  display: grid;
  grid-template-columns: 3fr 1fr;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0.125rem;
  background: white;
  box-shadow: 0 0.125rem 0.125rem 0 rgba(0,0,0,0.14), 0 0.1875rem 0.0625rem -0.125rem rgba(0,0,0,0.12), 0 0.0625rem 0.3125rem 0 rgba(0,0,0,0.2);
  -webkit-transition: background 0.25s,color 0.25s;
  transition: background 0.25s,color 0.25s;
}

.c6:focus-within {
  outline: -webkit-focus-ring-color auto 5px;
}

.c6 > div {
  padding: 1rem;
}

.c6 > input + div:before {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  border-right: 1px solid lightgrey;
  width: 3rem;
  text-align: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 2rem;
  border-radius: 0.125rem 0 0 0.125rem;
}

.c6 > input:checked + div:before {
  content: '✓';
  background: white;
  color: #028099;
  border-color: #028099;
}

.c6 > div:first-of-type {
  padding-left: 4rem;
}

.c6 .write-in-candidate-name {
  grid-column: span 2;
}

.c7 {
  margin-right: 0.5rem;
}

@media print {
  .c1 {
    -webkit-box-pack: start;
    -webkit-justify-content: flex-start;
    -ms-flex-pack: start;
    justify-content: flex-start;
    padding: 0;
  }
}

@media print {
  .c8 {
    display: none;
  }
}

@media print {
  .c11 {
    display: none;
  }
}

<div
  class="c0"
>
  <main
    class="c1"
  >
    <div
      class="c2"
    >
      <fieldset
        class=""
      >
        <legend
          class="c3"
        >
          <div
            class="c4"
          >
            <h1>
              President
            </h1>
            <p>
              <strong>
                Vote for 1.
              </strong>
               You have selected
               
              0
              .
            </p>
          </div>
        </legend>
        <div
          class="c5"
        >
          <label
            class="c6"
            for="Minnie Mouse"
          >
            <input
              class="visually-hidden c7"
              id="Minnie Mouse"
              name="president"
              type="checkbox"
              value="Minnie Mouse"
            />
            <div>
              <strong>
                Minnie Mouse
              </strong>
            </div>
            <div>
              Mouse
            </div>
          </label>
          <label
            class="c6"
            for="Mickey Mouse"
          >
            <input
              class="visually-hidden c7"
              id="Mickey Mouse"
              name="president"
              type="checkbox"
              value="Mickey Mouse"
            />
            <div>
              <strong>
                Mickey Mouse
              </strong>
            </div>
            <div>
              Mouse
            </div>
          </label>
          <label
            class="c6"
            for="Donald Duck"
          >
            <input
              class="visually-hidden c7"
              id="Donald Duck"
              name="president"
              type="checkbox"
              value="Donald Duck"
            />
            <div>
              <strong>
                Donald Duck
              </strong>
            </div>
            <div>
              Duck
            </div>
          </label>
          <label
            class="c6"
            for="writeInCandidate"
          >
            <input
              class="visually-hidden c7"
              id="writeInCandidate"
              name="president"
              type="checkbox"
              value="writeInCandidate"
            />
            <div
              class="write-in-candidate-name"
            >
              <em>
                add a write-in candidate
              </em>
            </div>
          </label>
        </div>
      </fieldset>
    </div>
  </main>
  <nav
    class="c8"
  >
    <button
      class="c9"
      type="button"
    >
      Next
    </button>
    <button
      class="c9"
      type="button"
    >
      Previous
    </button>
    <p
      class="c10"
    >
      1
       of 
      2
    </p>
  </nav>
  <nav
    class="c11"
  >
    <button
      class="c9"
      type="button"
    >
      Review
    </button>
    <button
      class="c9"
      type="button"
    >
      Help
    </button>
    <button
      class="c9"
      type="button"
    >
      Settings
    </button>
    <div />
  </nav>
</div>
`;
